--- a/features/authorization/src/main/res/layout/fragment_select_auth_method.xml
+++ b/features/authorization/src/main/res/layout/fragment_select_auth_method.xml
@@ -4,10 +4,11 @@
     <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:background="@android:color/holo_blue_bright">
+        android:background="@android:color/holo_green_light"
+        android:orientation="vertical">
 
         <TextView
-            android:id="@+id/btn_auth"
+            android:id="@+id/btn_selectMethod"
             android:layout_width="match_parent"
             android:layout_height="match_parent" />
 
