--- a/features/authorization/src/main/res/layout/fragment_select_auth_method.xml
+++ b/features/authorization/src/main/res/layout/fragment_select_auth_method.xml
@@ -1,6 +1,13 @@
 <?xml version="1.0" encoding="utf-8"?>
 <layout>
 
+    <data>
+
+        <variable
+            name="vm"
+            type="fox.features.authorization.presentation.select.SelectAuthMethodVM" />
+    </data>
+
     <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
@@ -10,7 +17,8 @@
         <TextView
             android:id="@+id/btn_selectMethod"
             android:layout_width="match_parent"
-            android:layout_height="match_parent" />
+            android:layout_height="match_parent"
+            android:text="@{vm.title}" />
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 </layout>
