--- a/features/authorization/src/main/res/layout/fragment_select_auth_method.xml
+++ b/features/authorization/src/main/res/layout/fragment_select_auth_method.xml
@@ -5,7 +5,7 @@
 
         <variable
             name="vm"
-            type="fox.features.authorization.presentation.select.SelectAuthMethodVM" />
+            type="fox.features.authorization.presentation.auth.AuthorizationVM" />
     </data>
 
     <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
