--- a/features/registration/src/main/res/layout/fragment_registration.xml
+++ b/features/registration/src/main/res/layout/fragment_registration.xml
@@ -1,5 +1,13 @@
 <?xml version="1.0" encoding="utf-8"?>
-<layout>
+<layout xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools">
+
+    <data>
+
+        <variable
+            name="vm"
+            type="arctic.fox.registration.presentation.RegistrationVM" />
+    </data>
 
     <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
         android:layout_width="match_parent"
@@ -11,6 +19,17 @@
             android:layout_height="match_parent"
             android:gravity="center"
             android:text="RegistrationF" />
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginBottom="100dp"
+            android:text="@{vm.data}"
+            android:textSize="20sp"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            tools:text="cred" />
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 </layout>
