--- a/features/registration/src/main/res/layout/fragment_registration.xml
+++ b/features/registration/src/main/res/layout/fragment_registration.xml
@@ -6,7 +6,7 @@
 
         <variable
             name="vm"
-            type="arctic.fox.registration.presentation.RegistrationVM" />
+            type="arctic.fox.registration.presentation.registration.RegistrationVM" />
     </data>
 
     <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
